--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -40,6 +40,7 @@
           <canvas id="myCanvas" width="800" height="800"/>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/window.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
