--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/window.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
